Implement global auth header rule
Auth header stub requires that a user be authorised to access any API other than /test

--- a/imposters/sampleImposter.ejs
+++ b/imposters/sampleImposter.ejs
@@ -8,7 +8,9 @@
         "headers": {}
         },
     "stubs": [
-     <% include ../stubs/sampleStub.json %>
+     <% include ../stubs/globalStub.json %>,
+     <% include ../stubs/testStub.json %>,
+     <% include ../stubs/privateStub.json %>
     ]
     
     
